--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,9 @@
     <script src="script.js" type="text/javascript"></script>
     <title>dB Counter</title>
 </head>
+
 <body>
-    <h1>Decibel Meter</h1>
+    <h1>Noise Detection</h1>
     <div class="main-inputs">
         <main>
             <h2><span id="db">-</span> dB</h2>
@@ -21,6 +23,7 @@
                 <br>
                 <input type="range" min="-30" max="30" value="0" class="slider" id="offset">
             </div>
+            <button id="mode-toggle" onclick="toggleBtnMode()">Dark Mode</button>
             <div class="input">
                 <label for="refresh_rate">Refresh every: <span id='refresh_value'>-</span> ms</label>
                 <br>
@@ -28,16 +31,6 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div class="col">
-            <p><a href="https://github.com/takispig/db-meter">GitHub Project</a></p>
-        </div>
-        <div class="col">
-            <p><a href="about.html">About</a></p>
-        </div>
-        <div class="col">
-            <p>Last updated: <span id="date">-</span></p>
-        </div>
-    </footer>
 </body>
+
 </html>
