--- a/index.html
+++ b/index.html
@@ -5,10 +5,245 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script src="script.js" type="text/javascript"></script>
     <title>dB Counter</title>
+    <style>
+        body {
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            background-color: #fff;
+            /* Light mode background color */
+            color: #000;
+            /* Light mode text color */
+        }
+
+        .dark-mode {
+            background-color: #000 !important;
+            /* Dark mode background color */
+            color: #fff !important;
+            /* Dark mode text color */
+        }
+
+        main {
+            text-align: center;
+            flex-grow: 1;
+        }
+
+        footer {
+            background-color: rgb(63, 63, 63);
+            color: white;
+            height: auto;
+            width: 100%;
+            margin-top: auto;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 3em;
+            font-style: normal;
+        }
+
+        h2 {
+            font-size: 3em;
+            font-style: italic;
+            text-align: center;
+        }
+
+        h3 {
+            text-align: center;
+            padding-bottom: 10px;
+        }
+
+        #db {
+            font-size: 9em;
+            font-family: "Lucida Console", "Courier New", monospace;
+        }
+
+        #visuals {
+            background: red;
+            height: 15px;
+            position: relative;
+            left: 50%;
+            bottom: 20%;
+            transform: translate(-50%, 50%);
+        }
+
+        .col {
+            text-align: center;
+            float: left;
+            width: 33.3%;
+            /* make 3 columns */
+            top: 50%;
+        }
+
+        .col a,
+        footer p {
+            font-family: "Lucida Console", "Courier New", monospace;
+            color: white;
+            text-decoration: none;
+        }
+
+        .col p {
+            user-select: none;
+        }
+
+        .col a:hover {
+            padding: 3px;
+            color: rgb(63, 63, 63);
+            background-color: white;
+        }
+
+        h3 a {
+            font-family: "Lucida Console", "Courier New", monospace;
+            color: black;
+            text-decoration: none;
+        }
+
+        h3 a:hover {
+            padding: 3px;
+            background-color: rgb(63, 63, 63);
+            color: white;
+        }
+
+        p {
+            color: black;
+            text-align: center;
+            padding-inline: 20%;
+        }
+
+        .inputs {
+            padding: 50px 10px;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        }
+
+        .input {
+            text-align: center;
+        }
+
+        @media screen and (max-width: 500px) {
+            .col {
+                width: 100%;
+            }
+
+            .input {
+                text-align: center;
+                width: 100%;
+            }
+        }
+    </style>
 </head>
+<script>
+    let biasDB = 30;
+    let visualsWidth = 0.2;
+    let localDbValues = []; // array to store db values for each loop withing the refresh_rate
+    let refresh_rate = 500;
+    let color = "green";
+    let stream;
+    let offset = 0;
+    let date;
+
+    navigator.mediaDevices
+        .getUserMedia({ audio: true, video: false })
+        .then((stream) => {
+            const context = new AudioContext();
+            const source = context.createMediaStreamSource(stream);
+            const processor = context.createScriptProcessor(2048, 1, 1);
+            const analyser = context.createAnalyser();
+
+            analyser.smoothingTimeConstant = 0.8;
+            analyser.fftSize = 256;
+
+            source.connect(analyser);
+            analyser.connect(processor);
+            processor.connect(context.destination);
+
+            processor.onaudioprocess = () => {
+                let data = new Uint8Array(analyser.frequencyBinCount);
+                analyser.getByteFrequencyData(data);
+                let rms = 0;
+
+                for (var i = 0; i < data.length; i++) {
+                    if (data[i] > 120) data[i] = 120;
+                    rms += data[i] * data[i];
+                }
+                rms = Math.sqrt(rms / data.length);
+                //   console.log("RMS: " + rms);
+
+                offset = parseInt(document.getElementById("offset").value);
+                document.getElementById("offset_value").innerText = offset;
+                value = rms + offset + biasDB;
+                localDbValues.push(value);
+            };
+        });
+
+    // update the volume every refresh_rate m.seconds
+    let updateDb = function () {
+        window.clearInterval(interval);
+
+        const db = document.getElementById("db");
+        let volume = Math.round(
+            localDbValues.reduce((a, b) => a + b) / localDbValues.length
+        );
+        //var volume = Math.round(Math.max.apply(null, localDbValues));
+        if (!isFinite(volume)) volume = 0; // we don't want/need negative decibels in that case
+        db.innerText = volume;
+        localDbValues = []; // clear previous values
+        changeColor(volume);
+
+        changeUpdateRate();
+        interval = window.setInterval(updateDb, refresh_rate);
+    };
+    let interval = window.setInterval(updateDb, refresh_rate);
+
+    // change the visualization colors according to the dbValue
+    function changeColor(decibels) {
+        if (decibels < 50) {
+            color = "green";
+        } else if (decibels >= 50 && decibels < 70) {
+            color = "yellow";
+        } else if (decibels >= 70 && decibels < 90) {
+            color = "orange";
+        } else {
+            color = "red";
+        }
+
+        //document.getElementById("visuals").style.height = dbValue + "px";
+        document.getElementById("visuals").style.width = (decibels * 2) * visualsWidth + "rem";
+        if (decibels >= 70) {
+            document.getElementById("visuals").style.background = "red";
+        } else {
+            let modeColorStr = document.body.classList.contains("dark-mode") && "white" || "black"
+            document.getElementById("visuals").style.background = modeColorStr;
+        }
+        document.getElementById("db").style.color = color;
+    }
+
+    // change update rate
+    function changeUpdateRate() {
+        refresh_rate = Number(document.getElementById("refresh_rate").value);
+        document.getElementById("refresh_value").innerText = refresh_rate;
+        window.setInterval(function () {
+            updateDb;
+        }, refresh_rate);
+    }
+
+    function toggleBtnMode() {
+        const body = document.body;
+        const button = document.getElementById("mode-toggle");
+        body.classList.toggle("dark-mode");
+        if (body.classList.contains("dark-mode")) {
+            button.textContent = "Light Mode";
+        } else {
+            button.textContent = "Dark Mode";
+        }
+    }
+</script>
 
 <body>
     <h1>Noise Detection</h1>
